force-app/main/default/objects/JBCXM__StatePreservation__c/JBCXM__StatePreservation__c.object-meta.xml
<CustomObject>
    <label>User state preservation</label>
    <nameField>
        <label>Area Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User state preservation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>