force-app/main/default/objects/JBCXM__StatePreservation__c/fields/JBCXM__ClientSideFilter__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__ClientSideFilter__c</fullName>
    <label>Client Side Filters</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>