force-app/main/default/objects/JBCXM__StatePreservation__c/fields/JBCXM__DashboardContainerId__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__DashboardContainerId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DashboardContainerId</label>
    <referenceTo>JBCXM__DashboardContainer__c</referenceTo>
    <relationshipLabel>StatePreservation</relationshipLabel>
    <relationshipName>StatePreservation</relationshipName>
    <type>Lookup</type>
</CustomField>