force-app/main/default/objects/JBCXM__StatePreservation__c/fields/JBCXM__DashboardId__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__DashboardId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DashboardId</label>
    <referenceTo>JBCXM__Dashboard__c</referenceTo>
    <relationshipLabel>StatePreservation</relationshipLabel>
    <relationshipName>StatePreservation</relationshipName>
    <type>Lookup</type>
</CustomField>