force-app/main/default/objects/JBCXM__StatePreservation__c/fields/JBCXM__HavingParams__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__HavingParams__c</fullName>
    <label>Having Params</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>