force-app/main/default/objects/JBCXM__StatePreservation__c/fields/JBCXM__RelationshipSection__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__RelationshipSection__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Relationship Section</label>
    <referenceTo>JBCXM__GSRelationshipSection__c</referenceTo>
    <relationshipLabel>User state preservation</relationshipLabel>
    <relationshipName>User_state_preservation</relationshipName>
    <type>Lookup</type>
</CustomField>