force-app/main/default/objects/JBCXM__StatePreservation__c/fields/JBCXM__ReportParams__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__ReportParams__c</fullName>
    <defaultValue>&apos;[]&apos;</defaultValue>
    <label>ReportParams</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>