force-app/main/default/objects/JBCXM__StatePreservation__c/fields/JBCXM__ServerSideFilters__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__ServerSideFilters__c</fullName>
    <label>Server Side Filters</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>