force-app/main/default/objects/JBCXM__StatePreservation__c/fields/JBCXM__SortColumns__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__SortColumns__c</fullName>
    <label>SortColumns</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>