force-app/main/default/objects/JBCXM__StatePreservation__c/fields/JBCXM__SubSection__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__SubSection__c</fullName>
    <description>It stores the sub tab details</description>
    <label>SubSection</label>
    <type>TextArea</type>
</CustomField>