force-app/main/default/objects/JBCXM__StatePreservation__c/fields/JBCXM__UIView__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__UIView__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>UI View Id</label>
    <referenceTo>JBCXM__UIViews__c</referenceTo>
    <relationshipLabel>User state preservation</relationshipLabel>
    <relationshipName>User_state_preservation</relationshipName>
    <type>Lookup</type>
</CustomField>