force-app/main/default/objects/JBCXM__StatePreservation__c/fields/JBCXM__UIViewId__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__UIViewId__c</fullName>
    <label>UI Views</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>