force-app/main/default/objects/JBCXM__StatePreservation__c/fields/JBCXM__UserSessionId__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__UserSessionId__c</fullName>
    <label>Session id by User</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>